updates with binary file

--- a/Solver_files/makefile
+++ b/Solver_files/makefile
@@ -1,5 +1,5 @@
 C_COMPILER     = g++
-C_FLAGS        = -O3
+C_FLAGS        = -O3 -pg
 OUTPUT         = ../dynamics.exe
 LIBS           = -lm
 
@@ -8,7 +8,7 @@ HEADERS = constants.h functions.h butcher.h particle.h
 OBJ = solver_update.o RK_init_update.o maths.o forces.o errors.o microphysics.o kvalues.o add_rm.cpp
 
 dynamics: $(OBJ)
-	$(C_COMPILER) $(OBJ) $(LIBS) -o $(OUTPUT)
+	$(C_COMPILER) $(OBJ) $(LIBS) -pg -o $(OUTPUT)
 
 .cpp.o:
 	$(C_COMPILER) $(C_FLAGS) -c $<
