--- a/Solver_files/makefile
+++ b/Solver_files/makefile
@@ -5,7 +5,7 @@ LIBS           = -lm
 
 HEADERS = constants.h functions.h butcher.h particle.h
 
-OBJ = solver_update.o RK_init_update.o maths.o forces.o errors.o microphysics.o kvalues.o add_rm.o
+OBJ = solver_new_err.o RK_init_update.o maths.o forces.o errors_update.o microphysics.o kvalues.o add_rm.o
 
 dynamics: $(OBJ)
 	$(C_COMPILER) $(OBJ) $(LIBS) -pg -o $(OUTPUT)
