--- a/Solver_files/makefile
+++ b/Solver_files/makefile
@@ -1,5 +1,5 @@
-C_COMPILER     = g++
-C_FLAGS        = -O3 -mavx -pg
+C_COMPILER     = g++ -std=c++11
+C_FLAGS        = -O3 -mavx -g
 OUTPUT         = ../dynamics.exe
 LIBS           = -lm
 
@@ -8,7 +8,7 @@ HEADERS = constants.h functions.h butcher.h particle.h
 OBJ = solver_new_err.o RK_init_update.o maths.o forces.o errors_update.o microphysics.o kvalues.o add_rm.o
 
 dynamics: $(OBJ)
-	$(C_COMPILER) $(OBJ) $(LIBS) -pg -o $(OUTPUT)
+	$(C_COMPILER) $(OBJ) $(LIBS)  -o $(OUTPUT)
 
 .cpp.o:
 	$(C_COMPILER) $(C_FLAGS) -c $<
