--- a/input/dusty_tails_K222b.in
+++ b/input/dusty_tails_K222b.in
@@ -1,7 +1,6 @@
-STAR:   T= 3830.0  M= 0.60   R= 0.58
-PLANET: P= 9.146   M= 0.03   R= 0.33   b= 0.65
-DUST:   s0= 2.0    comp= Mg08Fe12SiO4
-GRID:   rmin= 0.98   rmax= 1.10   tmin= 1.55   tmax= 1.60   pmin= 0.25   pmax= 0.05     //note pmin is read as negative!
-OUTFLOW: sph= 1   mdot= 1.0    tau= 0        //sph=1, spherical, sph=0 dayside, tau=1 for constant optical depth, tau=0 for optical depth tracing
-RUN:   Dt= 1e-2   orbits=0.50  npart= 250    cont=0   tinit=0.0
-LC:    t0= 0.0    earth_star= 243.836         //t0 is time to star lc, and earth_star is the star to observer distance in parsec
+STAR:   T= 3880.0  M= 0.60   R= 0.58
+PLANET: P= 9.146   M= 0.03   R= 0.33   b= 0.65    
+GRID:   rmin= 0.95   rmax= 1.10   tmin= 1.55   tmax= 1.60   pmin= 0.40   pmax= 0.10     //note pmin is read as negative!
+OUTFLOW: tau= 0                             // tau=1 for constant optical depth, tau=0 for optical depth tracing
+RUN:   Dt= 1e-2   npart= 250                 //DT is how often information is plotted. npart is number of particles thrown out every 100th of an orbit.
+LC:    t0= 0.50   earth_star= 243.836         //t0 is time to star lc, and earth_star is the star to observer distance in parsec
