--- a/spectra/spectra.in
+++ b/spectra/spectra.in
@@ -1,6 +1,6 @@
-KIC1255_b          //planet name
-Al2O3       //Dust composition
-5.0               //Initial dust grain size
+K222_b             //planet name
+Mg08Fe12SiO4       //Dust composition
+1.5                //Initial dust grain size
 250                //Particles thrown out every 100th of an orbit
-9.0                //Planetary mass loss rate in earth masses per Gyr
-4.995                //t0 for light curve
+3.0                //Planetary mass loss rate in earth masses per Gyr
+5.995              //t0 for light curve
